--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -213,6 +213,8 @@ img .backdrop--movieBackground {
 
 
 
+
+
 .icon-picture {
 	width: 4rem;
 	// height: auto;
@@ -252,314 +254,25 @@ img .backdrop--movieBackground {
 	margin: 0rem;
 	cursor: pointer;
 	background-color: rgba(76, 252, 0, 0);
-
 }
 
-// .btn-genre:hover {
-// 	animation: shake 0.6s infinite;
-// }
-// @keyframes shake {
-// 	0%{
-// 		transform: translate(0rem,0rem) rotate(0deg);
-// 	}
-// 	25%{
-// 		transform: translate(0.1rem,0.1rem) rotate(1deg);
-// 	}
-// 	50%{
-// 		transform: translate(-0.1rem,-0.1rem) rotate(-1deg);
-// 	}
-// 	75%{
-// 		transform: translate(0.2rem,-0.1rem) rotate(2deg);
-// 	}
-// 	100%{
-// 		transform: translate(-0.1rem,0.1rem) rotate(-1deg);
-// 	}
-// }
 
 .btn-genre:focus {
 	outline: none;
 } 
 
-
-@media only screen and (max-width: 2230px) {
-
-	.containerInfo {
-		width: 70%;
-		height: 75.4rem;
-	}
-
-	p.info {
-		font-size: 1.6rem;
-	}
-
-	.container {
-		width: 100%;
-		font-size: 2rem;
-	}
-
+.drop-down {
+	font-size: 4.5rem;
+	background-color: transparent;
+	border: none;
+	color: white;
+	position: absolute;
+	right: 0;
+	padding-top: 2rem;
+	padding-right: 3rem;
 	
-	h1.movieInfo-header {
-		font-size: 4rem;
-	}
-
-	.movieInfo {
-		width: 80%;
-	}
-
 }
 
-@media only screen and (max-width: 1900px) {
-
-	.containerInfo {
-		width: 100%;
-	}
-
-	p.info {
-		font-size: 1.5rem;
-	}
-
-	.container {
-		width: 100%;
-		// font-size: 2rem;
-	}
-
-	h1.movieInfo-header {
-		font-size: 3rem;
-	}
-
-	.movieInfo {
-		width: 80%;
-	}
-
-}
-
-
-
-@media only screen and (max-width: 1600px) {
-
-	.containerInfo {
-		width: 100%;
-		max-width: 80%;
-		max-height: 61.3rem;
-	}
-
-	p.info {
-		font-size: 1.4rem;
-	}
-
-	.container {
-		width: 100%;
-		// max-width: 60rem;
-		// font-size: 2rem;
-	}
-
-	h1.movieInfo-header {
-		font-size: 3rem;
-	}
-
-	.movieInfo {
-		width: 80%;
-	}
-
-	.movieInfo-image {
-		width: 40rem;
-		// padding-top: 1rem;
-		margin-top: 1rem;
-		height: auto;
-	}
-
-	.misc-details {
-		margin: 1rem 2rem 2rem 2rem;
-	}
-
-
-}
-
-
-@media only screen and (max-width: 1230px) {
-
-	.containerInfo {
-		width: 100%;
-		max-width: 80%;
-		max-height: 100%;
-	}
-
-	p.info {
-		font-size: 1.4rem;
-	}
-
-	.container {
-		// width: 100%;
-		// max-width: 60rem;
-		// font-size: 2rem;
-	}
-
-	h1.movieInfo-header {
-		font-size: 2.5rem;
-	}
-
-	.movieInfo {
-		width: 80%;
-	}
-
-	.movieInfo-image {
-		width: 35rem;
-		// padding-top: 1rem;
-		// margin-top: 1rem;
-		height: auto;
-		// margin-top: 10rem;
-	}
-
-	.misc-details {
-		margin: 1rem 2rem 2rem 2rem;
-	}
-
-
-}
-
-
-
-@media only screen and (max-width: 950px) {
-
-	// .movieInfo-container {
-	// 	max-height: 80rem;
-	// }
-
-
-	.row-info {
-		max-height: 80rem;
-	}
-
-	.containerInfo {
-		font-size: 10px;
-		max-width: 70%;
-		height: 90%;
-		margin-top: 2rem;
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-
-	}
-
-	p.info {
-		font-size: 1.3rem;
-	}
-	
-	.movieInfo-header {
-		font-size: 10px;
-	}
-
-	.container {
-		width: 100%;
-		font-size: 2rem;
-		height: 100%;
-		text-align: center;
-		
-	}
-	
-	.no-Image img {
-		width: 100%;
-	}
-
-	.movieInfo-image {
-		width: 25rem;
-		height: auto;
-	}
-
-}
-
-
-@media only screen and (max-width: 650px) {
-
-	// .backdrop {
-	// 	min-height: 100%;
-	// 	height: 100%;
-	// 	width: auto;
-	// 	background-size: cover;
-	// }
-
-
-	.containerInfo {
-		font-size: 10px;
-		max-width:70%;
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-	}
-
-	p.info {
-		// font-size: 1.3rem;
-	}
-	
-	.movieInfo-header {
-		font-size: 1.5rem;
-	}
-	
-	.movieInfo-image {
-		width: 20rem;
-	}
-
-}
-
-@media only screen and (max-width: 570px) {
-
-
-	.containerInfo {
-		max-width: 80%;
-		// width: 100%
-		// min-width: 30rem;
-	}
-	
-	.movieInfo-header {
-		font-size: 1.5rem;
-	}
-
-	
-	.movieInfo-image {
-		width: 200px;
-	}
-
-}
-@media only screen and (max-width: 350px) {
-
-
-	.containerInfo {
-		max-width: 120%;
-		width: 100rem;
-		height: auto;
-		// min-width: 30rem;
-		// margin: 0;
-		// height: 150rem;
-		overflow: hidden;
-	}
-	.movieInfo {
-		// margin-left: 5rem;
-		padding: 2rem;
-		max-width: 100%;
-	}	
-
-	.rating-star {
-		font-size: 2rem;
-	}
-
-	.fa-star {
-		font-size: 2rem;
-	}
-	.grayStars {
-		width: 4rem;
-	}
-
-	.misc {
-		padding: 0.8rem;
-	}
-
-}
-
-@media screen and (max-width: 700px) {
-	 html,body {
-		 min-width:20rem
-		}
-}
 
 
 .grayStars {
