--- a/src/sass/components/_queries.scss
+++ b/src/sass/components/_queries.scss
@@ -1,15 +1,322 @@
-@media only screen and (max-width: 1200px) {
-	.searchForm {
-		width: 90%;
+@media only screen and (max-width: 2230px) {
+
+	.containerInfo {
+		width: 70%;
+		height: 75.4rem;
 	}
+
+	p.info {
+		font-size: 1.6rem;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 2rem;
+	}
+
+	
+	h1.movieInfo-header {
+		font-size: 4rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+	.drop-down {
+		display: none;
+	}
+
+}
+
+@media only screen and (max-width: 1900px) {
+
+	.containerInfo {
+		width: 100%;
+	}
+
+	p.info {
+		font-size: 1.5rem;
+	}
+
+	.container {
+		width: 100%;
+		// font-size: 2rem;
+	}
+
+	h1.movieInfo-header {
+		font-size: 3rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+}
+
+
+
+@media only screen and (max-width: 1600px) {
+
+	.containerInfo {
+		width: 100%;
+		max-width: 80%;
+		max-height: 61.3rem;
+	}
+
+	p.info {
+		font-size: 1.4rem;
+	}
+
+	.container {
+		width: 100%;
+		// max-width: 60rem;
+		// font-size: 2rem;
+	}
+
+	h1.movieInfo-header {
+		font-size: 3rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+	.movieInfo-image {
+		width: 40rem;
+		// padding-top: 1rem;
+		margin-top: 1rem;
+		height: auto;
+	}
+
+	.misc-details {
+		margin: 1rem 2rem 2rem 2rem;
+	}
+
+
+}
+
+
+@media only screen and (max-width: 1230px) {
+
+	.containerInfo {
+		width: 100%;
+		max-width: 80%;
+		max-height: 100%;
+	}
+
+	p.info {
+		font-size: 1.4rem;
+	}
+
+	.container {
+		// width: 100%;
+		// max-width: 60rem;
+		// font-size: 2rem;
+	}
+
+	h1.movieInfo-header {
+		font-size: 2.5rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+	.movieInfo-image {
+		width: 35rem;
+		// padding-top: 1rem;
+		// margin-top: 1rem;
+		height: auto;
+		// margin-top: 10rem;
+	}
+
+	.misc-details {
+		margin: 1rem 2rem 2rem 2rem;
+	}
+
+
 }
 
 @media only screen and (max-width: 1023px) {
+
 	.searchForm {
-		width: 90%;
+		width: 100%;
 	}
 }
 
-@media only screen and (max-width: 480px) {
+
+@media only screen and (max-width: 950px) {
+
+	// .movieInfo-container {
+	// 	max-height: 80rem;
+	// }
+
+
+	.row-info {
+		max-height: 80rem;
+	}
+
+	.containerInfo {
+		font-size: 10px;
+		max-width: 70%;
+		height: 90%;
+		margin-top: 2rem;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+
+	}
+
+	p.info {
+		font-size: 1.3rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 10px;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 2rem;
+		height: 100%;
+		text-align: center;
+		
+	}
+	
+	.no-Image img {
+		width: 100%;
+	}
+
+	.movieInfo-image {
+		width: 25rem;
+		height: auto;
+	}
+
+}
+
+@media only screen and (max-width: 767px) {
+	// .searchForm {
+	// 	width: 100%;
+	// }
+
+	// .icon-picture {
+	// 	width: 3rem;
+	// }
+
+	// .input-field {
+	// 	width: 100%;
+	// }
+}
+
+
+
+
+@media only screen and (max-width: 650px) {
+
+	.containerInfo {
+		font-size: 10px;
+		max-width:70%;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+	}
+
+	p.info {
+		// font-size: 1.3rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
+	
+	.movieInfo-image {
+		width: 20rem;
+	}
+
+	.discover {
+		display: none;
+	}
+	
+	.drop-down {
+		display: unset;
+	}
+
+	.searchForm {
+		padding-top: 8rem;
+		width: 100%;
+	}
+
 	
 }
+
+@media only screen and (max-width: 570px) {
+
+
+	.containerInfo {
+		max-width: 80%;
+		// width: 100%
+		// min-width: 30rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
+
+	
+	.movieInfo-image {
+		width: 200px;
+	}
+
+}
+
+
+@media only screen and (max-width: 480px) {
+
+	.icon-picture {
+		width: 2.5rem;
+	}
+}
+
+
+@media only screen and (max-width: 350px) {
+
+
+	.containerInfo {
+		max-width: 120%;
+		width: 100rem;
+		height: auto;
+		// min-width: 30rem;
+		// margin: 0;
+		// height: 150rem;
+		overflow: hidden;
+	}
+	.movieInfo {
+		// margin-left: 5rem;
+		padding: 2rem;
+		max-width: 100%;
+	}	
+
+	.rating-star {
+		font-size: 2rem;
+	}
+
+	.fa-star {
+		font-size: 2rem;
+	}
+	.grayStars {
+		width: 4rem;
+	}
+
+	.misc {
+		padding: 0.8rem;
+	}
+
+}
+
+@media screen and (max-width: 700px) {
+	 html,body {
+		 min-width:20rem
+		}
+}
+
