--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -54,9 +54,6 @@ html {
 
 }
 
-.input-field {
-
-}
 
 .row {
 	display: flex;
@@ -111,21 +108,23 @@ html {
 
 .searchForm {
 	width: 30%;
-	min-width: 10rem;
+	min-width: 30rem;
 }
 
-.input-field input[type="text"] {
-	// background: $color-white;
-	// outline: none;
-	// border: none;
-	// background-color: $color-light;
-	// padding: 1rem 1rem 1rem 3rem;
 
-	// width: 100%;
-	// border-radius: 4rem;
-	// text-decoration: none;
-	// padding-left: 4rem;
-	// border-bottom: 0.2rem;
+.input-field {
+	width: 100%;
+
+	&__searchTerm {
+		width: 100%;
+	}
+}
+
+
+
+
+
+.input-field input[type="text"] {
 	border: none;
 	border-bottom: 0.1rem solid white;
 	border-color: white;
@@ -181,7 +180,7 @@ span {
 	border-radius: 1rem;
 	border: 0.2rem solid $color-white;
 	height: 2rem;
-	width: 20%;
+	width: 80%;
 	display: flex;
 	// justify-content: center;
 }
@@ -271,43 +270,6 @@ body {
 
 
 
-@media only screen and (max-width: 1200px) {
-	.searchForm {
-		width: 50%;
-	}
 
-	.containerInfo {
-		width: 90%;
-	}
 
-	.movieInfo {
-		width: 700px;
-		font-size: 10px;
-	}
-}
 
-@media only screen and (max-width: 1023px) {
-	.searchForm {
-		width: 60%;
-	}
-}
-
-@media only screen and (max-width: 767px) {
-	.searchForm {
-		width: 60%;
-	}
-
-	.icon-picture {
-		width: 3rem;
-	}
-}
-
-@media only screen and (max-width: 480px) {
-	.searchForm {
-		width: 60%;
-	}
-
-	.icon-picture {
-		width: 2.5rem;
-	}
-}
